--- a/app/catalog/templates/catalog/filtered_records.html
+++ b/app/catalog/templates/catalog/filtered_records.html
@@ -22,10 +22,10 @@
   var t;
   var actions = {
     'created': function(linkObj) {
-      $(linkObj).text({{ _('unmark') }});
+      $(linkObj).text('{{ _('unmark') }}');
     },
     'deleted': function(linkObj) {
-      $(linkObj).text({{ _('mark') }});
+      $(linkObj).text('{{ _('mark') }}');
     }
   };
 
