--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -6,5 +6,5 @@
 {% block content_title %}<h2>{{ title }}</h2>{% endblock %}
 
 {% block content %}
-<p>{{ _('We couldn't find the page you requested.') }}</p>
+<p>{{ _("We couldn't find the page you requested.") }}</p>
 {% endblock %}
