--- a/app/auth/templates/auth/recover_ask.html
+++ b/app/auth/templates/auth/recover_ask.html
@@ -6,16 +6,16 @@
   {%- if session.get('recover_sent') %}
   {{ flash_messages() }}
   <div class="span16">
-    <h3>{{ _('Check your email inbox or try to request password recovery again a bit later.') }}</h3>
+    <h3>{{ _("Check your email inbox or try to request password recovery again a bit later.") }}</h3>
   </div>
   {%- else %}
   <div class="span4">
-    <p>{{ _('Here you can request a link for password reset.') }}</p>
-    <p>{{ _('We'll send a special link to the email you provided us with at
-    the signing up time.') }}</p>
+    <p>{{ _("Here you can request a link for password reset.") }}</p>
+    <p>{{ _("We'll send a special link to the email you provided us "
+            "with at the signing up time.") }}</p>
   </div>
   <div class="span12">
-    {{ render_form(form, 'auth.recover_ask', _('Confirm')) }}
+    {{ render_form(form, 'auth.ask_recovery', _('Confirm')) }}
   </div>
   {%- endif %}
 </div>
