Styling for links inside labeled span

--- a/app/static/sass/screen.sass
+++ b/app/static/sass/screen.sass
@@ -30,5 +30,8 @@ body
       position: absolute
       top: 5px
       right: 10px
+    .label
+      a
+        color: white
   .visit-selected
     display: none
