--- a/app/static/sass/screen.sass
+++ b/app/static/sass/screen.sass
@@ -30,8 +30,10 @@ body
       position: absolute
       top: 5px
       right: 10px
-    .label
-      a
-        color: white
+  .label
+    a
+      color: white
   .visit-selected
     display: none
+  .tag
+    white-space: nowrap
