--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
       <div class="container">
         {%- block content_title %}
         <div class="page-header">
-          <h1>{{ page_title }} <small>{{ page_description }}</small></h1>
+          <h1>{{ page_title|safe }} <small>{{ page_description }}</small></h1>
         </div>
         {%- endblock %}
         {%- block content %}{%- endblock %}
