Created sitemap implementation

--- a/app/catalog/templates/catalog/create_record.html
+++ b/app/catalog/templates/catalog/create_record.html
@@ -1,7 +1,8 @@
 {%- extends "base.html" %}
 {% from "_base_macro.html" import render_form %}
 {%- set page_title = _("Create record for category %(cat)s", cat=category.title) %}
-{%- set create_record = url_for('.create_record', key=category.key.urlsafe()) %}
+{#%- set create_record = url_for('.create_record',
+key=category.key.urlsafe()) %#}
 {%- block content %}
 <div class="row">
   <div class="span6">
